@@ -292,12 +292,18 @@ class CommandExecutor(engine: => SparkEngine, commands: CommandStorage)
           val pluginExecutionDriverClass = Array("--class", "com.intel.intelanalytics.engine.spark.command.CommandDriver")
           val pluginDependencyJars = Array("--jars", s"${SparkContextFactory.jarPath("interfaces")},${SparkContextFactory.jarPath("launcher")},$pluginJarPath")
           val pluginDependencyFiles = Array("--files", s"$tempConfFileName#application.conf$kerbFile", "--conf", s"config.resource=application.conf")
-          //        "--driver-java-options", "-XX:+PrintGCDetails -XX:MaxPermSize=512m", /* to print gc */
           val executionParams = Array(
             "--num-executors", s"${SparkEngineConfig.sparkOnYarnNumExecutors}",
             // lower #cores with more #executors often beats the other way around due to small JVMs having lower GC overhead
             // "--executor-cores", s"${SparkEngineConfig.sparkOnYarnNumCoresPerExecutor}",
             "--driver-java-options", s"-XX:MaxPermSize=${SparkEngineConfig.sparkDriverMaxPermSize} $kerbOptions -Dspark.executor.extraClassPath=/opt/cloudera/parcels/CDH/lib/hive/lib")
+
+
+          val executionConfigs = {
+            for {
+              (config, value) <- SparkEngineConfig.sparkConfProperties
+            } yield List("--conf", s"$config=$value")
+          }.flatMap(identity).toArray
 
           // TODO: Once we get rid of setting SPARK_CLASSPATH in cdh, we should be setting only the driver-class-path
           val driver_classpath = SparkEngineConfig.sparkMaster match {
@@ -316,6 +322,7 @@ class CommandExecutor(engine: => SparkEngine, commands: CommandStorage)
             pluginDependencyJars ++
             pluginDependencyFiles ++
             executionParams ++
+            executionConfigs ++
             driver_classpath ++
             verbose ++
             sparkInternalDriverClass ++
@@ -325,6 +332,12 @@ class CommandExecutor(engine: => SparkEngine, commands: CommandStorage)
           info(s"Launching Spark Submit with InputArgs: ${inputArgs.mkString(" ")}")
           val pluginDependencyJarsStr = s"${SparkContextFactory.jarPath("engine-spark")}:${pluginExtraClasspath.mkString(":")}"
           val javaArgs = Array("java", "-cp", s"$pluginDependencyJarsStr", "org.apache.spark.deploy.SparkSubmit") ++ inputArgs
+
+          // We were initially invoking SparkSubmit main method directly (i.e. inside our JVM). However, only one
+          // ApplicationMaster can exist at a time inside a single JVM. All further calls to SparkSubmit fail to
+          // create an instance of ApplicationMaster due to current spark design. We took the approach of invoking
+          // SparkSubmit as a standalone process (using engine-spark.jar) for every command to get the parallel
+          // execution in yarn-cluster mode.
 
           val pb = new java.lang.ProcessBuilder(javaArgs: _*)
           val result = (pb.inheritIO() !)
